--- a/kurs/templates/kurs/dashboard.html
+++ b/kurs/templates/kurs/dashboard.html
@@ -1,8 +1,8 @@
 {% extends 'kurs/index.html' %}
 {% block content %}
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-    <h1 class="display-5">Сервис управления рассылками</h1>
-    <p class="lead">Приветствуем Вас, это Ваш сервис рассылок! Мы Ваш лучший помощник!</p>
+    <h1 class="display-4">RedDeadMail</h1>
+    <p class="lead">RedDeadMail - это ВАШ сервис рассылок! Мы ваш лучший помощник!</p>
 </div>
 <div class="col-12">
     <div class="card mb-4 box-shadow">
