--- a/servise/templates/clients_list.html
+++ b/servise/templates/clients_list.html
@@ -4,7 +4,7 @@
     <h1 class="display-4">Клиенты</h1>
 </div>
 <div class="col-12 mb-3">
-    <a class="btn btn-outline-primary col-12" href="{% url 'service:create_client' %}">Добавить клиента</a>
+    <a class="btn btn-outline-primary col-12" href="{% url 'servise:create_client' %}">Добавить клиента</a>
 </div>
 <div class="row text-center mt-3">
     {% for object in object_list %}
